# rfcrm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: main.py  settings.py
app/db/: __init__.py  base_database.py  in_mem_sqlite_database.py  postgres_database.py
app/models/: base_model.py  company.py  contact.py  creator_base.py  user.py  validator_regex.py
app/routers/: __init__.py  company_router.py  contact_router.py  hh_router.py  user_router.py
app/services/: auth.py  company_service.py  contact_service.py  crud_service.py  hh_service.py  user_service.py
migrations/: env.py
migrations/versions/: 0594dfba7608_add_contact.py  1dd720033bbe_add_contact.py  3c4d5a381326_add_user.py  ae58a567e400_update_contact_phone_field.py  b48f805d57d3_add_created_by_field.py  f3f063f28b6c_add_company.py
tests/: conftest.py  fixtures.py  test_basemodel.py  test_company_models.py  test_company_routes.py  test_company_service.py  test_contact_models.py  test_contact_router.py  test_contact_service.py  test_hh_router.py  test_root_route.py  test_user_model.py  test_user_routes.py  test_user_service.py
